# zlib-ng

./: .gitignore  CMakeLists.txt  INDEX.md  Makefile.in  chunkset.c  chunkset_tpl.h  compare256.c  compare256_rle.c  compare258.c  configure  cpu_features.c  cpu_features.h  crc32.c  crc32_braid.c  crc32_braid_comb_p.h  crc32_braid_p.h  crc32_braid_tbl.h  crc32_gf2.c  crc32_gf2_comb.c  crc32_gf2_comb_tbl.h  crc32_gf2_p.h  crc32_gf2_tbl.h  crc32_p.h  crc32_tbl.h  deflate.c  deflate.h  deflate_rle.c  functable.c  functable.h  gzread.c.in  gzwrite.c  infback.c  inffast.c  inflate.c  inflate_p.h  insert_string_tpl.h  match_tpl.h  trees.c  zconf.h.in  zutil.c  (+1 more)
.github/workflows/: cmake-configure.yml  cmake-wasm32.yml  cmake.yml  configure.yml  coverity.yml  format.yml  link.yml  pigz.yml  pkgcheck.yml
arch/arm/: chunkset_neon.c
arch/power/: chunkset_power8.c  crc32_power8.c
arch/s390/: crc32-vx.c
arch/x86/: adler32_avx2_tpl.h  chunkset_avx.c  chunkset_sse2.c  chunkset_sse41.c  crc32_fold_pclmulqdq.c  x86.h
cmake/: detect-arch.cmake  detect-coverage.cmake  detect-sanitizer.cmake  toolchain-aarch64.cmake  toolchain-arm.cmake  toolchain-mingw-i686.cmake  toolchain-mingw-x86_64.cmake  toolchain-powerpc.cmake  toolchain-powerpc64.cmake  toolchain-powerpc64le.cmake  toolchain-s390x.cmake  toolchain-sparc64.cmake
test/: CMakeLists.txt  Makefile.in  abicheck.sh  test_adler32.cc  test_aligned_alloc.cc  test_compare256_rle.cc  test_compress.cc  test_crc32.cc  test_cve-2003-0107.cc  test_gzio.cc  test_main.cc  test_version.cc
test/benchmarks/: CMakeLists.txt  benchmark_adler32.cc  benchmark_chunkset.cc  benchmark_compare256_rle.cc  benchmark_compare258.cc  benchmark_crc32.cc  benchmark_main.cc  benchmark_slidehash.cc
test/pigz/: CMakeLists.txt
tools/: makecrct_braid.c  makecrct_gf2.c
win32/: Makefile.a64  Makefile.arm  Makefile.msc
